# TP-Simu

./: .gitignore  CHANGELOG.md  CLAUDE.md  Graficos.md  TPSimulacion.md  ejecutar_experimentos.py  generar_graficos.py  pyproject.toml  resultados-casos.json
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.temp-repair/: mantenimiento-original.old
Documentación/: Graficos.md  formato_papers_estudiantes.doc
Documentación/Paper/: Paper_Editorial_Matriz_Pinguino.md
Documentación/docs/: DUDAS_VALIDACION.md  Docu.md  PLAN_ELIMINAR_STOCK.md  PLAN_VARIABLES_RESULTADO_CORREGIDO.md  PROPUESTA_FDP.md  README.md  REPORTE_MODELO_OPERATIVO.md
Paper/: Formato.md  Paper_Editorial_Matriz_Pinguino.md
Scripts/: ejecutar_experimentos.py  generar_graficos.py  generar_tabla_combinaciones.py  simulacion.py
Scripts/FDP/: AQA.py  DE.py  DEm.py  DI.py  EstadoLote.py  IA.py  PaginasLibro.py  __init__.py
Scripts/config/: caso_base.json  casos.json
Scripts/resultados/: all_cm.json  configs.json  embalaje_cm.json  encuadernacion_cm.json  im.json  (+6 more)
config/: 8h-windows.yaml  booktype.yaml  caso_base.json  casos_im.json  default.yaml  priority.yaml  template.yaml
docs/: AnalisisPrevio.md  DUDAS_VALIDACION.md  DiagramaBien.mermaid  Docu.md  PROPUESTA_FDP.md  README.md  configuracion.json  diagrama_template.mermaid  distributions.md  mapeo_variables_analisis_python.md  simulacion.py  simulation-activity-diagram.mermaid  simulation-activity-diagram.puml
(+171 files in other folders)
